@@ -29,10 +29,9 @@ using std::string;
 using std::cout;
 using boost::shared_ptr;
 
-ExamineContentJob::ExamineContentJob (shared_ptr<const Film> f, shared_ptr<Content> c, bool calculate_digest)
+ExamineContentJob::ExamineContentJob (shared_ptr<const Film> f, shared_ptr<Content> c)
 	: Job (f)
 	, _content (c)
-	, _calculate_digest (calculate_digest)
 {
 
 }
@@ -51,7 +50,7 @@ ExamineContentJob::name () const
 void
 ExamineContentJob::run ()
 {
-	_content->examine (shared_from_this (), _calculate_digest);
+	_content->examine (shared_from_this ());
 	set_progress (1);
 	set_state (FINISHED_OK);
 }
