@@ -1,5 +1,5 @@
 /*
-    Copyright (C) 2012-2014 Carl Hetherington <cth@carlh.net>
+    Copyright (C) 2012-2015 Carl Hetherington <cth@carlh.net>
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -930,13 +930,13 @@ Film::content () const
 }
 
 void
-Film::examine_and_add_content (shared_ptr<Content> c, bool calculate_digest)
+Film::examine_and_add_content (shared_ptr<Content> c)
 {
 	if (dynamic_pointer_cast<FFmpegContent> (c)) {
 		run_ffprobe (c->path(0), file ("ffprobe.log"), _log);
 	}
 			
-	shared_ptr<Job> j (new ExamineContentJob (shared_from_this(), c, calculate_digest));
+	shared_ptr<Job> j (new ExamineContentJob (shared_from_this(), c));
 	j->Finished.connect (bind (&Film::maybe_add_content, this, boost::weak_ptr<Job> (j), boost::weak_ptr<Content> (c)));
 	JobManager::instance()->add (j);
 }
