@@ -37,7 +37,7 @@ public:
 		return boost::dynamic_pointer_cast<ImageContent> (Content::shared_from_this ());
 	};
 
-	void examine (boost::shared_ptr<Job>, bool calculate_digest);
+	void examine (boost::shared_ptr<Job>);
 	std::string summary () const;
 	std::string technical_summary () const;
 	void as_xml (xmlpp::Node *) const;
